// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api should search, load and save a project 1`] = `
Array [
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Uusi projekti perustettu HASSU/123/2023",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmään on tuotu Projektivelhosta projektisi:
HASSU AUTOMAATTITESTIPROJEKTI1
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "mikko.haapamki@cgi.com",
      "mikko.haapamaki02@cgi.com",
    ],
  },
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus odottaa hyväksyntää HASSU/123/2023",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektistasi
HASSU AUTOMAATTITESTIPROJEKTI1
on luotu aloituskuulutus, joka odottaa hyväksyntääsi.
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "mikko.haapamki@cgi.com",
      "mikko.haapamaki02@cgi.com",
    ],
  },
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty HASSU/123/2023",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektin
HASSU AUTOMAATTITESTIPROJEKTI1
aloituskuulutus on hyväksytty.
Voit tarkastella aloituskuulutusta osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus
Saat tämän viestin, koska sinut on merkitty aloituskuulutuksen laatijaksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": "mikko.haapamki@cgi.com",
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "T412 Aloituskuulutus.pdf",
      },
    ],
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty HASSU/123/2023",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektin
HASSU AUTOMAATTITESTIPROJEKTI1
aloituskuulutus on hyväksytty. Liitteenä aloituskuulutus PDF-tiedostona, muistathan viedä sen asiakirjanhallintaan.

Voit tarkastella aloituskuulutusta osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus

Saat tämän viestin, koska sinut on merkitty aloituskuulutuksen projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "mikko.haapamki@cgi.com",
      "mikko.haapamaki02@cgi.com",
    ],
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      },
    ],
    "subject": "TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA ILMOITTAMINEN - HASSU AUTOMAATTITESTIPROJEKTI1",
    "text": "TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA ILMOITTAMINEN

HASSU AUTOMAATTITESTIPROJEKTI1

Väylävirasto ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee suunnittelun ja maastotöiden aloittamista. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla vähintään 30 päivän ajan siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Kuulutus julkaistaan 2.1.2022, Väyläviraston tietoverkossa osoitteessa https://vayla.fi/kuulutukset.

Väylävirasto pyytää suunnittelualueen kuntia julkisemaan julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä. Ilmoituksen nähtävillä oloa ei tarvitse todentaa Väylävirastolle.

Lorem Ipsum

Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä, tutustu verkkosivujen tietosuojaosioon osoitteessa https://vayla.fi/tietosuoja.

Lisätietoja antaa
Nokia, Testi1 Hassu, puh. 123, mikko.haapamaki@cgi.com
Kajaani, Marko Koi, puh. 0293121213, markku.koi@koi.com",
    "to": Array [
      "mikkeli@mikke.li",
      "juva@ju.va",
      "savonlinna@savonlin.na",
      "kirjaamo.etela-savo@ely-keskus.fi",
    ],
  },
]
`;

exports[`Api should search, load and save a project 2`] = `
Object {
  "description": "testSuunnitteluvaihePerustiedot",
  "obj": Object {
    "__typename": "VuorovaikutusKierros",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "esitettavatYhteystiedot": undefined,
    "esittelyaineistot": undefined,
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "LokalisoituTeksti",
    },
    "ilmoituksenVastaanottajat": undefined,
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnitelmaluonnokset": undefined,
    "suunnittelumateriaali": undefined,
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "tila": "MUOKATTAVISSA",
    "videot": undefined,
    "vuorovaikutusNumero": 0,
    "vuorovaikutusTilaisuudet": undefined,
  },
}
`;

exports[`Api should search, load and save a project 3`] = `
Object {
  "description": "testSuunnitteluvaiheVuorovaikutus",
  "obj": Object {
    "__typename": "VuorovaikutusKierros",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "esitettavatYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [
        "A000112",
      ],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "esittelyaineistot": undefined,
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "LokalisoituTeksti",
    },
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnitelmaluonnokset": undefined,
    "suunnittelumateriaali": undefined,
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "tila": "MUOKATTAVISSA",
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 0,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [
            "A000112",
          ],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 4`] = `
Object {
  "description": "saveAndVerifyAineistoSave #initialSave",
  "obj": Object {
    "__typename": "VuorovaikutusKierros",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "esitettavatYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [
        "A000112",
      ],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "esittelyaineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
        "jarjestys": 1,
        "nimi": "tokatiedosto_toka.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
        "jarjestys": 2,
        "nimi": "ekatiedosto_eka.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "LokalisoituTeksti",
    },
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnitelmaluonnokset": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 1,
        "kategoriaId": "T1xx",
        "nimi": "karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "suunnittelumateriaali": undefined,
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "tila": "MUOKATTAVISSA",
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 0,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [
            "A000112",
          ],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 5`] = `
Object {
  "description": "saveAndVerifyAineistoSave #updateNimiAndJarjestys",
  "obj": Object {
    "__typename": "VuorovaikutusKierros",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "esitettavatYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [
        "A000112",
      ],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "esittelyaineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 1,
        "kategoriaId": "T1xx",
        "nimi": "karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "LokalisoituTeksti",
    },
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnitelmaluonnokset": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 1,
        "kategoriaId": "T1xx",
        "nimi": "karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 11,
        "kategoriaId": "T1xx",
        "nimi": "new karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "suunnittelumateriaali": undefined,
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "tila": "MUOKATTAVISSA",
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 0,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [
            "A000112",
          ],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 6`] = `
Object {
  "description": "saveAndVerifyAineistoSave #esittelyAineistotWithoutFirst",
  "obj": Object {
    "__typename": "VuorovaikutusKierros",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "esitettavatYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [
        "A000112",
      ],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "esittelyaineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 1,
        "kategoriaId": "T1xx",
        "nimi": "karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "LokalisoituTeksti",
    },
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnitelmaluonnokset": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 1,
        "kategoriaId": "T1xx",
        "nimi": "karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 11,
        "kategoriaId": "T1xx",
        "nimi": "new karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "suunnittelumateriaali": undefined,
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "tila": "MUOKATTAVISSA",
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 0,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [
            "A000112",
          ],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 7`] = `
Object {
  "__typename": "VuorovaikutusKierros",
  "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
  "esitettavatYhteystiedot": Object {
    "__typename": "StandardiYhteystiedot",
    "yhteysHenkilot": Array [
      "A000112",
    ],
    "yhteysTiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
  },
  "esittelyaineistot": Array [
    Object {
      "__typename": "Aineisto",
      "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
      "jarjestys": 1,
      "kategoriaId": "T1xx",
      "nimi": "karttakuvalla_tiedosto.pdf",
      "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf",
      "tila": "VALMIS",
      "tuotu": "***unittest***",
    },
  ],
  "hankkeenKuvaus": Object {
    "SAAME": "Saameksi suunnitteluvaihe",
    "SUOMI": "Lorem Ipsum suunnitteluvaihe",
    "__typename": "LokalisoituTeksti",
  },
  "ilmoituksenVastaanottajat": Object {
    "__typename": "IlmoituksenVastaanottajat",
    "kunnat": Array [
      Object {
        "__typename": "KuntaVastaanottaja",
        "id": 491,
        "lahetetty": "2022-03-11T14:54",
        "sahkoposti": "mikkeli@mikke.li",
      },
      Object {
        "__typename": "KuntaVastaanottaja",
        "id": 178,
        "lahetetty": "2022-03-11T14:54",
        "sahkoposti": "juva@ju.va",
      },
      Object {
        "__typename": "KuntaVastaanottaja",
        "id": 740,
        "lahetetty": "2022-03-11T14:54",
        "sahkoposti": "savonlinna@savonlin.na",
      },
    ],
    "viranomaiset": Array [
      Object {
        "__typename": "ViranomaisVastaanottaja",
        "lahetetty": "2022-03-11T14:54",
        "nimi": "ETELA_SAVO_ELY",
        "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
      },
    ],
  },
  "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
  "palautteidenVastaanottajat": Array [
    "A000111",
  ],
  "suunnitelmaluonnokset": Array [
    Object {
      "__typename": "Aineisto",
      "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
      "jarjestys": 1,
      "kategoriaId": "T1xx",
      "nimi": "karttakuvalla_tiedosto.pdf",
      "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf",
      "tila": "VALMIS",
      "tuotu": "***unittest***",
    },
    Object {
      "__typename": "Aineisto",
      "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
      "jarjestys": 11,
      "kategoriaId": "T1xx",
      "nimi": "new karttakuvalla_tiedosto.pdf",
      "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf",
      "tila": "VALMIS",
      "tuotu": "***unittest***",
    },
  ],
  "suunnittelumateriaali": undefined,
  "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
  "tila": "MUOKATTAVISSA",
  "videot": Array [
    Object {
      "__typename": "Linkki",
      "nimi": "Esittely 1",
      "url": "https://video",
    },
  ],
  "vuorovaikutusJulkaisuPaiva": "2022-03-23",
  "vuorovaikutusNumero": 0,
  "vuorovaikutusTilaisuudet": Array [
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "15:00",
      "kaytettavaPalvelu": "TEAMS",
      "linkki": "https://linkki_tilaisuuteen",
      "nimi": "Lorem ipsum 1",
      "paattymisAika": "16:00",
      "paivamaara": "2022-03-04",
      "tyyppi": "VERKOSSA",
    },
    Object {
      "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "10:00",
      "nimi": "Lorem ipsum two 1",
      "osoite": "Katu 123",
      "paattymisAika": "11:00",
      "paikka": "Kunnantalo",
      "paivamaara": "2022-04-05",
      "postinumero": "00100",
      "postitoimipaikka": "Helsinki",
      "tyyppi": "PAIKALLA",
    },
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "10:00",
      "esitettavatYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "nimi": "Soittoaikatilaisuuden nimi tässä",
      "paattymisAika": "11:00",
      "paivamaara": "2022-04-05",
      "tyyppi": "SOITTOAIKA",
    },
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "12:00",
      "esitettavatYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
      "paattymisAika": "13:00",
      "paivamaara": "2033-04-05",
      "tyyppi": "SOITTOAIKA",
    },
  ],
}
`;

exports[`Api should search, load and save a project 8`] = `undefined`;

exports[`Api should search, load and save a project 9`] = `
Object {
  "description": "publicProjekti ennen suunnitteluvaihetta",
  "obj": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisu": Object {
      "__typename": "AloitusKuulutusJulkaisuJulkinen",
      "aloituskuulutusPDFt": Object {
        "SUOMI": Object {
          "__typename": "AloitusKuulutusPDF",
          "aloituskuulutusIlmoitusPDFPath": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus/T412 Aloituskuulutus.pdf",
        },
        "__typename": "AloitusKuulutusPDFt",
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
        "__typename": "LokalisoituTeksti",
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
      },
      "kuulutusPaiva": "2022-01-02",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "__typename": "SuunnitteluSopimusJulkaisu",
        "email": "mikko.haapamaki@cgi.com",
        "etunimi": "Testi1",
        "kunta": 536,
        "logo": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelusopimus/logo.png",
        "puhelinnumero": "123",
        "sukunimi": "Hassu",
      },
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": undefined,
        "asiatunnusVayla": "HASSU/123/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "kuvaus": undefined,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Testi1",
          "kunta": 536,
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123",
          "sahkoposti": "mikko.haapamaki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "euRahoitus": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "oid": "1.2.246.578.5.1.2978288874.2711575506",
    "paivitetty": "***unit test***",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "mikko.haapamki@cgi.com",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "projektiPaallikko": true,
        "puhelinnumero": "123",
        "sukunimi": "Hassu",
      },
    ],
    "status": "ALOITUSKUULUTUS",
    "suunnitteluSopimus": Object {
      "__typename": "SuunnitteluSopimusJulkaisu",
      "email": "mikko.haapamaki@cgi.com",
      "etunimi": "Testi1",
      "kunta": 536,
      "logo": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelusopimus/logo.png",
      "puhelinnumero": "123",
      "sukunimi": "Hassu",
    },
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/123/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  },
}
`;

exports[`Api should search, load and save a project 10`] = `
Object {
  "description": "publicProjekti vuorovaikutusKierrosJulkaisut",
  "obj": undefined,
}
`;

exports[`Api should search, load and save a project 11`] = `
Array [
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "TS Tie Yleisotilaisuus kutsu.pdf",
      },
    ],
    "subject": "SUUNNITELMAN LAATIJAN KUTSUSTA YLEISÖTILAISUUTEEN ILMOITTAMINEN",
    "text": "HASSU AUTOMAATTITESTIPROJEKTI1

Väylävirasto laatii liikennejärjestelmästä ja maanteistä annetun lain (LjMTL, 503/2005) mukaista tiesuunnitelmaa HASSU AUTOMAATTITESTIPROJEKTI1.

Väylävirasto ilmoittaa, että se julkaisee tietoverkossaan kutsun, joka koskee otsikossa mainitun tiesuunnitelman yleisötilaisuutta (laki liikennejärjestelmästä ja maanteistä 27 §).

Kutsu julkaistaan 23.3.2022 väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Väylävirasto pyytää Helsinki, Vantaa ja Väylävirastoa julkaisemaan liitteenä olevan kutsun tietoverkossaan. Kutsu tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kutsun julkaisupäivänä. Kutsun julkaisemista ei tarvitse todentaa Väylävirastolle.

Väylävirasto käsittelee tiesuunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Lisätietoja väyläsuunnittelun tietosuojakäytänteistä on saatavilla verkkosivujen tietosuojaosiossa osoitteessa https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
CGI Suomi Oy, Testi1 Hassu, puhelin 123 ja sähköposti mikko.haapamaki@cgi.com.
CGI Suomi Oy, A-Tunnus1 Hassu, puhelin 123 ja sähköposti mikko.haapamki@cgi.com.
Kajaani, Marko Koi, puhelin 0293121213 ja sähköposti markku.koi@koi.com.

LIITTEET	Kutsu tiedotus-/yleisötilaisuuteen (20T)",
    "to": "mikkeli@mikke.li",
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "TS Tie Yleisotilaisuus kutsu.pdf",
      },
    ],
    "subject": "SUUNNITELMAN LAATIJAN KUTSUSTA YLEISÖTILAISUUTEEN ILMOITTAMINEN",
    "text": "HASSU AUTOMAATTITESTIPROJEKTI1

Väylävirasto laatii liikennejärjestelmästä ja maanteistä annetun lain (LjMTL, 503/2005) mukaista tiesuunnitelmaa HASSU AUTOMAATTITESTIPROJEKTI1.

Väylävirasto ilmoittaa, että se julkaisee tietoverkossaan kutsun, joka koskee otsikossa mainitun tiesuunnitelman yleisötilaisuutta (laki liikennejärjestelmästä ja maanteistä 27 §).

Kutsu julkaistaan 23.3.2022 väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Väylävirasto pyytää Helsinki, Vantaa ja Väylävirastoa julkaisemaan liitteenä olevan kutsun tietoverkossaan. Kutsu tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kutsun julkaisupäivänä. Kutsun julkaisemista ei tarvitse todentaa Väylävirastolle.

Väylävirasto käsittelee tiesuunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Lisätietoja väyläsuunnittelun tietosuojakäytänteistä on saatavilla verkkosivujen tietosuojaosiossa osoitteessa https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
CGI Suomi Oy, Testi1 Hassu, puhelin 123 ja sähköposti mikko.haapamaki@cgi.com.
CGI Suomi Oy, A-Tunnus1 Hassu, puhelin 123 ja sähköposti mikko.haapamki@cgi.com.
Kajaani, Marko Koi, puhelin 0293121213 ja sähköposti markku.koi@koi.com.

LIITTEET	Kutsu tiedotus-/yleisötilaisuuteen (20T)",
    "to": "juva@ju.va",
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "TS Tie Yleisotilaisuus kutsu.pdf",
      },
    ],
    "subject": "SUUNNITELMAN LAATIJAN KUTSUSTA YLEISÖTILAISUUTEEN ILMOITTAMINEN",
    "text": "HASSU AUTOMAATTITESTIPROJEKTI1

Väylävirasto laatii liikennejärjestelmästä ja maanteistä annetun lain (LjMTL, 503/2005) mukaista tiesuunnitelmaa HASSU AUTOMAATTITESTIPROJEKTI1.

Väylävirasto ilmoittaa, että se julkaisee tietoverkossaan kutsun, joka koskee otsikossa mainitun tiesuunnitelman yleisötilaisuutta (laki liikennejärjestelmästä ja maanteistä 27 §).

Kutsu julkaistaan 23.3.2022 väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Väylävirasto pyytää Helsinki, Vantaa ja Väylävirastoa julkaisemaan liitteenä olevan kutsun tietoverkossaan. Kutsu tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kutsun julkaisupäivänä. Kutsun julkaisemista ei tarvitse todentaa Väylävirastolle.

Väylävirasto käsittelee tiesuunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Lisätietoja väyläsuunnittelun tietosuojakäytänteistä on saatavilla verkkosivujen tietosuojaosiossa osoitteessa https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
CGI Suomi Oy, Testi1 Hassu, puhelin 123 ja sähköposti mikko.haapamaki@cgi.com.
CGI Suomi Oy, A-Tunnus1 Hassu, puhelin 123 ja sähköposti mikko.haapamki@cgi.com.
Kajaani, Marko Koi, puhelin 0293121213 ja sähköposti markku.koi@koi.com.

LIITTEET	Kutsu tiedotus-/yleisötilaisuuteen (20T)",
    "to": "savonlinna@savonlin.na",
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "TS Tie Yleisotilaisuus kutsu.pdf",
      },
    ],
    "subject": "SUUNNITELMAN LAATIJAN KUTSUSTA YLEISÖTILAISUUTEEN ILMOITTAMINEN",
    "text": "HASSU AUTOMAATTITESTIPROJEKTI1

Väylävirasto laatii liikennejärjestelmästä ja maanteistä annetun lain (LjMTL, 503/2005) mukaista tiesuunnitelmaa HASSU AUTOMAATTITESTIPROJEKTI1.

Väylävirasto ilmoittaa, että se julkaisee tietoverkossaan kutsun, joka koskee otsikossa mainitun tiesuunnitelman yleisötilaisuutta (laki liikennejärjestelmästä ja maanteistä 27 §).

Kutsu julkaistaan 23.3.2022 väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Väylävirasto pyytää Helsinki, Vantaa ja Väylävirastoa julkaisemaan liitteenä olevan kutsun tietoverkossaan. Kutsu tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kutsun julkaisupäivänä. Kutsun julkaisemista ei tarvitse todentaa Väylävirastolle.

Väylävirasto käsittelee tiesuunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Lisätietoja väyläsuunnittelun tietosuojakäytänteistä on saatavilla verkkosivujen tietosuojaosiossa osoitteessa https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
CGI Suomi Oy, Testi1 Hassu, puhelin 123 ja sähköposti mikko.haapamaki@cgi.com.
CGI Suomi Oy, A-Tunnus1 Hassu, puhelin 123 ja sähköposti mikko.haapamki@cgi.com.
Kajaani, Marko Koi, puhelin 0293121213 ja sähköposti markku.koi@koi.com.

LIITTEET	Kutsu tiedotus-/yleisötilaisuuteen (20T)",
    "to": "kirjaamo.etela-savo@ely-keskus.fi",
  },
]
`;

exports[`Api should search, load and save a project 12`] = `
Object {
  "yllapito S3 files just after vuorovaikutus published": Object {
    "aloituskuulutus/1/T412 Aloituskuulutus.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "suunnittelusopimus/logo.png": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
    },
    "suunnitteluvaihe/vuorovaikutus_1/TS Tie Yleisotilaisuus kutsu.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TS%20Tie%20Yleisotilaisuus%20kutsu.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''karttakuvalla_tiedosto.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Api should search, load and save a project 13`] = `
Object {
  "public S3 files just after vuorovaikutus published": Object {
    "aloituskuulutus/T412 Aloituskuulutus.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "suunnittelusopimus/logo.png": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/TS Tie Yleisotilaisuus kutsu.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TS%20Tie%20Yleisotilaisuus%20kutsu.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''karttakuvalla_tiedosto.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
  },
}
`;

exports[`Api should search, load and save a project 14`] = `
Object {
  "args": Array [
    Object {
      "DistributionId": "unit-test-distribution-id",
      "InvalidationBatch": Object {
        "CallerReference": "***unittest***",
        "Paths": Object {
          "Items": Array [
            "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus/*",
          ],
          "Quantity": 1,
        },
      },
    },
    Object {
      "DistributionId": "unit-test-distribution-id",
      "InvalidationBatch": Object {
        "CallerReference": "***unittest***",
        "Paths": Object {
          "Items": Array [
            "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/*",
          ],
          "Quantity": 1,
        },
      },
    },
  ],
  "stub": "createInvalidation",
}
`;

exports[`Api should search, load and save a project 15`] = `
Object {
  "description": "testNahtavillaOloPerustiedot",
  "obj": Object {
    "__typename": "NahtavillaoloVaihe",
    "aineistoNahtavilla": undefined,
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi nahtavillaoloVaihe",
      "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
      "__typename": "LokalisoituTeksti",
    },
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kuulutusPaiva": "2022-06-07",
    "kuulutusVaihePaattyyPaiva": "2042-06-07",
    "kuulutusYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [
        "A000112",
      ],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
    "lisaAineisto": undefined,
    "lisaAineistoParametrit": Object {
      "__typename": "LisaAineistoParametrit",
      "hash": "***unittest***",
      "nahtavillaoloVaiheId": 1,
      "poistumisPaiva": "***unittest***",
    },
    "muistutusoikeusPaattyyPaiva": "2042-06-08",
    "muokkausTila": "MUOKKAUS",
    "uudelleenKuulutus": undefined,
  },
}
`;

exports[`Api should search, load and save a project 16`] = `
Object {
  "description": "testImportNahtavillaoloAineistot",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2281391320.546836829",
          "jarjestys": 1,
          "kategoriaId": "T2xx",
          "nimi": "T222 Meluesteiden periaatekuvat.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2400417287.1486592341",
          "jarjestys": 2,
          "kategoriaId": "T2xx",
          "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2661373170.3358971896",
          "jarjestys": 3,
          "kategoriaId": "T2xx",
          "nimi": "T224 Siltataulukko.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2717425363.3158441393",
          "jarjestys": 4,
          "kategoriaId": "T2xx",
          "nimi": "T211 Piirustusmerkinnät.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2723303646.77167902",
          "jarjestys": 5,
          "kategoriaId": "T2xx",
          "nimi": "T212 Yleiskartta.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hankkeenKuvaus": Object {
        "SAAME": "Saameksi nahtavillaoloVaihe",
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "lisaAineisto": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
          "jarjestys": 1,
          "nimi": "tokatiedosto_toka.pdf",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "lisaAineistoParametrit": Object {
        "__typename": "LisaAineistoParametrit",
        "hash": "***unittest***",
        "nahtavillaoloVaiheId": 1,
        "poistumisPaiva": "***unittest***",
      },
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "muokkausTila": "MUOKKAUS",
      "uudelleenKuulutus": undefined,
    },
  },
}
`;

exports[`Api should search, load and save a project 17`] = `
Object {
  "description": "lisaAineisto",
  "obj": Object {
    "aineistot": Array [
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 1,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T222 Meluesteiden periaatekuvat.txt",
      },
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 2,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
      },
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 3,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T224 Siltataulukko.txt",
      },
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 4,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T211 Piirustusmerkinnät.txt",
      },
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 5,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T212 Yleiskartta.txt",
      },
    ],
    "lisaAineistot": Array [
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 1,
        "kategoriaId": undefined,
        "linkki": "***unittest***",
        "nimi": "tokatiedosto_toka.pdf",
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 18`] = `
Object {
  "description": "testNahtavillaOloAfterApproval",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2281391320.546836829",
          "jarjestys": 1,
          "kategoriaId": "T2xx",
          "nimi": "T222 Meluesteiden periaatekuvat.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T222 Meluesteiden periaatekuvat.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2400417287.1486592341",
          "jarjestys": 2,
          "kategoriaId": "T2xx",
          "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T213 Teiden hallinnolsten järjestelyjen kartat.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2661373170.3358971896",
          "jarjestys": 3,
          "kategoriaId": "T2xx",
          "nimi": "T224 Siltataulukko.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T224 Siltataulukko.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2717425363.3158441393",
          "jarjestys": 4,
          "kategoriaId": "T2xx",
          "nimi": "T211 Piirustusmerkinnät.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T211 Piirustusmerkinnät.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2723303646.77167902",
          "jarjestys": 5,
          "kategoriaId": "T2xx",
          "nimi": "T212 Yleiskartta.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T212 Yleiskartta.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hankkeenKuvaus": Object {
        "SAAME": "Saameksi nahtavillaoloVaihe",
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "lisaAineisto": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
          "jarjestys": 1,
          "nimi": "tokatiedosto_toka.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/tokatiedosto_toka.pdf",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "lisaAineistoParametrit": Object {
        "__typename": "LisaAineistoParametrit",
        "hash": "***unittest***",
        "nahtavillaoloVaiheId": 1,
        "poistumisPaiva": "***unittest***",
      },
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "muokkausTila": "LUKU",
      "uudelleenKuulutus": undefined,
    },
    "nahtavillaoloVaiheJulkaisu": Object {
      "__typename": "NahtavillaoloVaiheJulkaisu",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2281391320.546836829",
          "jarjestys": 1,
          "kategoriaId": "T2xx",
          "nimi": "T222 Meluesteiden periaatekuvat.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T222 Meluesteiden periaatekuvat.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2400417287.1486592341",
          "jarjestys": 2,
          "kategoriaId": "T2xx",
          "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T213 Teiden hallinnolsten järjestelyjen kartat.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2661373170.3358971896",
          "jarjestys": 3,
          "kategoriaId": "T2xx",
          "nimi": "T224 Siltataulukko.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T224 Siltataulukko.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2717425363.3158441393",
          "jarjestys": 4,
          "kategoriaId": "T2xx",
          "nimi": "T211 Piirustusmerkinnät.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T211 Piirustusmerkinnät.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2723303646.77167902",
          "jarjestys": 5,
          "kategoriaId": "T2xx",
          "nimi": "T212 Yleiskartta.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T212 Yleiskartta.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hankkeenKuvaus": Object {
        "SAAME": "Saameksi nahtavillaoloVaihe",
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "hyvaksyja": "A000112",
      "hyvaksymisPaiva": "**unittest**",
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "lisaAineisto": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
          "jarjestys": 1,
          "nimi": "tokatiedosto_toka.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/tokatiedosto_toka.pdf",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "lisaAineistoParametrit": Object {
        "__typename": "LisaAineistoParametrit",
        "hash": "***unittest***",
        "nahtavillaoloVaiheId": 1,
        "poistumisPaiva": "***unittest***",
      },
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "muokkaaja": "A000112",
      "nahtavillaoloPDFt": Object {
        "SUOMI": Object {
          "__typename": "NahtavillaoloPDF",
          "nahtavillaoloIlmoitusKiinteistonOmistajallePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/31T Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf",
          "nahtavillaoloIlmoitusPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf",
          "nahtavillaoloPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/1/T414 Kuulutus suunnitelman nahtavillaolo.pdf",
        },
        "__typename": "NahtavillaoloPDFt",
      },
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "Velho",
        "asiatunnusVayla": "HASSU/123/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "linkki": null,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "tyyppi": "TIE",
        "varahenkilonEmail": "mikko.haapamaki02@cgi.com",
        "vastuuhenkilonEmail": "mikko.haapamki@cgi.com",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
  },
}
`;

exports[`Api should search, load and save a project 19`] = `
Object {
  "description": "publicProjektiNahtavillaOloJulkinenAfterApproval",
  "obj": Object {
    "__typename": "NahtavillaoloVaiheJulkaisuJulkinen",
    "aineistoNahtavilla": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2281391320.546836829",
        "jarjestys": 1,
        "kategoriaId": "T2xx",
        "nimi": "T222 Meluesteiden periaatekuvat.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T222 Meluesteiden periaatekuvat.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2400417287.1486592341",
        "jarjestys": 2,
        "kategoriaId": "T2xx",
        "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T213 Teiden hallinnolsten järjestelyjen kartat.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2661373170.3358971896",
        "jarjestys": 3,
        "kategoriaId": "T2xx",
        "nimi": "T224 Siltataulukko.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T224 Siltataulukko.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2717425363.3158441393",
        "jarjestys": 4,
        "kategoriaId": "T2xx",
        "nimi": "T211 Piirustusmerkinnät.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T211 Piirustusmerkinnät.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2723303646.77167902",
        "jarjestys": 5,
        "kategoriaId": "T2xx",
        "nimi": "T212 Yleiskartta.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T212 Yleiskartta.txt",
        "tuotu": "***unittest***",
      },
    ],
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi nahtavillaoloVaihe",
      "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
      "__typename": "LokalisoituTeksti",
    },
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "kuulutusPaiva": "2022-06-07",
    "kuulutusVaihePaattyyPaiva": "2042-06-07",
    "muistutusoikeusPaattyyPaiva": "2042-06-08",
    "tila": "HYVAKSYTTY",
    "uudelleenKuulutus": undefined,
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/123/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "123",
        "sahkoposti": "mikko.haapamki@cgi.com",
        "sukunimi": "Hassu",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 20`] = `
Object {
  "yllapito S3 files Nahtavillaolo published": Object {
    "aloituskuulutus/1/T412 Aloituskuulutus.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "nahtavillaolo/1/31T Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''31T%20Ilmoitus%20kiinteistonomistajat%20nahtaville%20asettaminen.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/1/T211 Piirustusmerkinnät.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T211%20Piirustusmerkinn%C3%A4t.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
    },
    "nahtavillaolo/1/T212 Yleiskartta.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T212%20Yleiskartta.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
    },
    "nahtavillaolo/1/T213 Teiden hallinnolsten järjestelyjen kartat.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T213%20Teiden%20hallinnolsten%20j%C3%A4rjestelyjen%20kartat.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
    },
    "nahtavillaolo/1/T222 Meluesteiden periaatekuvat.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T222%20Meluesteiden%20periaatekuvat.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
    },
    "nahtavillaolo/1/T224 Siltataulukko.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T224%20Siltataulukko.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
    },
    "nahtavillaolo/1/T414 Kuulutus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414%20Kuulutus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/1/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414_1%20Ilmoitus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/1/tokatiedosto_toka.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''tokatiedosto_toka.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
    },
    "suunnittelusopimus/logo.png": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
    },
    "suunnitteluvaihe/vuorovaikutus_1/TS Tie Yleisotilaisuus kutsu.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TS%20Tie%20Yleisotilaisuus%20kutsu.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''karttakuvalla_tiedosto.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Api should search, load and save a project 21`] = `
Object {
  "public S3 files Nahtavillaolo published": Object {
    "aloituskuulutus/T412 Aloituskuulutus.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "nahtavillaolo/31T Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''31T%20Ilmoitus%20kiinteistonomistajat%20nahtaville%20asettaminen.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T211 Piirustusmerkinnät.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T211%20Piirustusmerkinn%C3%A4t.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T212 Yleiskartta.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T212%20Yleiskartta.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T213 Teiden hallinnolsten järjestelyjen kartat.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T213%20Teiden%20hallinnolsten%20j%C3%A4rjestelyjen%20kartat.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T222 Meluesteiden periaatekuvat.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T222%20Meluesteiden%20periaatekuvat.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T224 Siltataulukko.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T224%20Siltataulukko.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T414 Kuulutus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414%20Kuulutus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T414_1%20Ilmoitus%20suunnitelman%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/tokatiedosto_toka.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''tokatiedosto_toka.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "suunnittelusopimus/logo.png": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "checksum": "ABC123",
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/TS Tie Yleisotilaisuus kutsu.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TS%20Tie%20Yleisotilaisuus%20kutsu.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''karttakuvalla_tiedosto.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
  },
}
`;

exports[`Api should search, load and save a project 22`] = `
Array [
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus odottaa hyväksyntää HASSU/123/2023",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektistasi
HASSU AUTOMAATTITESTIPROJEKTI1
on luotu aloituskuulutus, joka odottaa hyväksyntääsi.
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "mikko.haapamki@cgi.com",
      "mikko.haapamaki02@cgi.com",
    ],
  },
]
`;

exports[`Api should search, load and save a project 23`] = `
Object {
  "description": "testImportHyvaksymispaatosvaiheAineistot",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
          "jarjestys": 1,
          "kategoriaId": "T1xx",
          "nimi": "T113 TS Esite.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "asianro123",
      "hyvaksymisPaatoksenPvm": "2022-06-09",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "nimi": "TYHJÄ.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "muokkausTila": "MUOKKAUS",
      "uudelleenKuulutus": undefined,
    },
    "kasittelynTila": Object {
      "__typename": "KasittelynTila",
      "ensimmainenJatkopaatos": undefined,
      "hyvaksymispaatos": Object {
        "__typename": "Hyvaksymispaatos",
        "asianumero": "asianro123",
        "paatoksenPvm": "2022-06-09",
      },
      "toinenJatkopaatos": undefined,
    },
  },
}
`;

exports[`Api should search, load and save a project 24`] = `
Object {
  "yllapito S3 files Hyvaksymispaatos created": Object {
    "/1/T113 TS Esite.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T113%20TS%20Esite.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
    },
    "/1/paatos/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Api should search, load and save a project 25`] = `
Object {
  "description": "testHyvaksymisPaatosVaiheAfterApproval",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
          "jarjestys": 1,
          "kategoriaId": "T1xx",
          "nimi": "T113 TS Esite.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/T113 TS Esite.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "asianro123",
      "hyvaksymisPaatoksenPvm": "2022-06-09",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/paatos/TYHJÄ.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "muokkausTila": "LUKU",
      "uudelleenKuulutus": undefined,
    },
    "hyvaksymisPaatosVaiheJulkaisu": Object {
      "__typename": "HyvaksymisPaatosVaiheJulkaisu",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
          "jarjestys": 1,
          "kategoriaId": "T1xx",
          "nimi": "T113 TS Esite.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/T113 TS Esite.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksyja": "A000112",
      "hyvaksymisPaatoksenAsianumero": "asianro123",
      "hyvaksymisPaatoksenPvm": "2022-06-09",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/paatos/TYHJÄ.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hyvaksymisPaatosVaihePDFt": Object {
        "SUOMI": Object {
          "__typename": "HyvaksymisPaatosVaihePDF",
          "hyvaksymisIlmoitusLausunnonantajillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
          "hyvaksymisIlmoitusMuistuttajillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
          "hyvaksymisKuulutusPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
          "ilmoitusHyvaksymispaatoskuulutuksestaKunnillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle.pdf",
          "ilmoitusHyvaksymispaatoskuulutuksestaToiselleViranomaisellePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2978288874.2711575506/hyvaksymispaatos/1/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
        },
        "__typename": "HyvaksymisPaatosVaihePDFt",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "muokkaaja": "A000112",
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "Velho",
        "asiatunnusVayla": "HASSU/123/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "linkki": null,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "tyyppi": "TIE",
        "varahenkilonEmail": "mikko.haapamaki02@cgi.com",
        "vastuuhenkilonEmail": "mikko.haapamki@cgi.com",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
  },
}
`;

exports[`Api should search, load and save a project 26`] = `
Object {
  "description": "publicProjektiHyvaksymisPaatosVaiheJulkinenAfterApproval",
  "obj": Object {
    "__typename": "HyvaksymisPaatosVaiheJulkaisuJulkinen",
    "aineistoNahtavilla": undefined,
    "hallintoOikeus": "HAMEENLINNA",
    "hyvaksymisPaatoksenAsianumero": "asianro123",
    "hyvaksymisPaatoksenPvm": "2022-06-09",
    "hyvaksymisPaatos": undefined,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "kuulutusPaiva": "2022-06-09",
    "kuulutusVaihePaattyyPaiva": "2022-06-08",
    "tila": "HYVAKSYTTY",
    "uudelleenKuulutus": undefined,
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/123/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "123",
        "sahkoposti": "mikko.haapamki@cgi.com",
        "sukunimi": "Hassu",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 27`] = `
Object {
  "public S3 files Hyvaksymispaatos approved": Object {
    "/T113 TS Esite.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T113%20TS%20Esite.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431%20Kuulutus%20hyvaksymispaatoksen%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja ELYlle.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_1%20Ilmoitus%20hyvaksymispaatoksesta%20kunnalle%20ja%20ELYlle.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_2%20Ilmoitus%20hyvaksymispaatoksen%20kuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_3%20Ilmoitus%20hyvaksymispaatoksesta%20lausunnon%20antajille.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_4%20Ilmoitus%20hyvaksymispaatoksesta%20muistuttajille.pdf",
      "ContentType": "application/pdf",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/paatos/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
  },
}
`;

exports[`Api should search, load and save a project 28`] = `
Array [
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus odottaa hyväksyntää HASSU/123/2023",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektistasi
HASSU AUTOMAATTITESTIPROJEKTI1
on luotu aloituskuulutus, joka odottaa hyväksyntääsi.
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "mikko.haapamki@cgi.com",
      "mikko.haapamaki02@cgi.com",
    ],
  },
]
`;

exports[`Api should search, load and save a project 29`] = `
Object {
  "velho.saveProjekti": Array [
    Array [
      "1.2.246.578.5.1.2978288874.2711575506",
      Object {
        "hyvaksymispaatos": Object {
          "asianumero": "asianro123",
          "paatoksenPvm": "2022-06-09",
        },
      },
    ],
  ],
}
`;
